--- a/app/public/home.html
+++ b/app/public/home.html
@@ -11,10 +11,11 @@
   <body>
     <div class="container">
       <div class="jumbotron">
-        <h1 class="text-center"><span class="fa fa-fire"></span> Friend Finder</h1>
+        <h1 class="text-center">Friend Finder</h1>
         <hr />
         <h2 class="text-center">
-          Create a profile and answer a few basic questions to get started looking for that special someone!
+          Looking for a new friend? Follow the link to the survery page and create a profile and answer a few basic
+          questions to get started!
         </h2>
         <br />
 
