--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -247,7 +247,7 @@
         </div>
         <div class="modal-body">
           <h2 id="match-name"></h2>
-          <img id="match-img" src="" alt="" />
+          <img id="match-img" src="" alt="" style="width: 500px"/>
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
